# advent_of_code

./: .gitignore
00_Setup/src/: lib.rs
01_Kalorie_Counting/src/: bad.rs
05_Stack_inserter/src/: lib.rs
06_Turing_trouble/src/: lib.rs
07_No_device_left_in_space/: Cargo.toml
07_No_device_left_in_space/src/: lib.rs
08_Tree_towers/src/: lib.rs
09_Rope_bridge/src/: lib.rs
10_Cathy_Ray/src/: lib.rs
11_Monkey_business/src/: lib.rs
12_Hill_Climbing/: Cargo.toml
12_Hill_Climbing/src/: lib.rs
13_Distress_norri_norri/: Cargo.toml
13_Distress_norri_norri/src/: lib.rs
14_Sand_Castles/: Cargo.toml
14_Sand_Castles/src/: lib.rs
15_Beacon_Exclusion_Zone/: Cargo.toml
15_Beacon_Exclusion_Zone/src/: lib.rs
16_Proboscidea_Volcanium/src/: lib.rs
2024/day3/App/: Program.cs
2024/day3/Test/: UnitTest1.cs
2024/day3_cs/: day3.sln
2024/day3_cs/Lib/: Lib.cs
2024/day3_cs/Test/: Test.csproj
2024/day4_cs/Lib/: Lib.cs
2024/day4_cs/Test/: UnitTest1.cs
2024/day5_ts/: main.ts  main_test.ts
2024/day6_go/lib/: lib.go
2024/day6_go/main/: go.mod  main.go
aoc_tools/: Cargo.toml
aoc_tools/src/: lib.rs
python2023/1/: 1.py
python2023/2/: 2.py
python2023/3/: 3.py
python2023/4/: 4.py
python2023/5/: 5.py
rust2022/00_Setup/: Cargo.toml
rust2022/03_Rucked_up_sack/: Cargo.toml
rust2022/08_Tree_towers/: Cargo.toml
rust2022/11_Monkey_business/: Cargo.toml
rust2022/16_Proboscidea_Volcanium/: Cargo.toml
rust2022/viewer/: Cargo.toml
rust2022/viewer/src/: app.rs
viewer/: Cargo.toml  index.html
viewer/src/: app.rs
(+33 files in other folders)
