[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_14 = {path ="../14_Sand_Castles"}
base64 = "0.21.0"
log = "0.4.17"
image = "0.24.6"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "InputEvent"]}
yew = { version="0.20",     features=["csr"] }
gloo = "0.8.1"
